阿里云分块上传本地文件代码调整提交
Signed-off-by: 刘柱栋 <liuzhudong57@126.com>

--- a/songFile/resources/aliyun_oss_config.properties
+++ b/songFile/resources/aliyun_oss_config.properties
@@ -3,6 +3,8 @@ aliyun.oss.bucket=cherrytime
 aliyun.oss.accesskeyId=ndm6c0zcwyz1x6n5hqe66rig
 aliyun.oss.accesskeySecret=uDbjGwyWTrXwzGjDZUoMdRUq9cE=
 aliyun.oss.host=http://oss-cn-hangzhou.aliyuncs.com
-##### 512kb    1048576 == 1mb
+##### 512kb=524288    1048576 == 1mb
 aliyun.oss.multipart.upload.partsize=524288
 aliyun.oss.multipart.upload.concurrencies=10
+###
+aliyun.oss.client.exception.re.connect.counts=3
