超过20M的wen件用又拍云断点续传

--- a/songFile/resources/upyun_config.properties
+++ b/songFile/resources/upyun_config.properties
@@ -5,5 +5,5 @@ upyun.operatorPwd=m123456789
 upyun.returnUrl=http://www.google.com/return/
 upyun.formApiSecret=a0Dyca4OLXm8cmsTIco7LbGMLd4=
 
-##### 512kb    1048576 == 1mb
-upyun.multipartSize=524288
+##### 524288=512kb    1048576 == 1mb
+upyun.multipartSize=1048576
