修改启动程序代码 提交
Signed-off-by: 刘柱栋 <liuzhudong57@126.com>

--- a/songFile/resources/aliyun_oss_config.properties
+++ b/songFile/resources/aliyun_oss_config.properties
@@ -8,3 +8,9 @@ aliyun.oss.multipart.upload.partsize=524288
 aliyun.oss.multipart.upload.concurrencies=10
 ###
 aliyun.oss.client.exception.re.connect.counts=3
+###\u5916\u94fe\u5206\u4eab\u5bc6\u7801\u9519\u8bef
+
+#file.local.path.root=G:/\u4eabCD
+file.local.path.root=G:/\u4eabCD(upyun)
+#file.local.path.root=G:
+file.local.path.oss.key.root=G:/\u4eabCD(upyun)
