--- a/songFile/.classpath
+++ b/songFile/.classpath
@@ -3,7 +3,36 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_25"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/songFile_libs"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0 (2)"/>
+	<classpathentry kind="lib" path="libs/aliyun-sdk-oss-2.0.4.jar"/>
+	<classpathentry kind="lib" path="libs/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/audiotagtool-1.0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/cglib-2.2.2.jar"/>
+	<classpathentry kind="lib" path="libs/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="libs/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="libs/httpasyncclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="libs/httpclientandroidlib-4.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-nio-4.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/jaudiotagger-2.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/javassist-3.17.1-GA.jar"/>
+	<classpathentry kind="lib" path="libs/jdom-1.1.jar"/>
+	<classpathentry kind="lib" path="libs/json-20140107.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-api-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-core-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/mybatis-3.2.7.jar"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.20-bin.jar"/>
+	<classpathentry kind="lib" path="libs/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="libs/song1.formbean.v.1.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
